# polycube_withHexEx

./: .gitmodules  CMakeLists.txt  HexExWrapper.cpp  HexExWrapper.h  README.md  S1.flags  S1.mesh  main.cpp
libHexEx/: .gitlab-ci.yml  .gitmodules  BUILDING  CMakeLists.txt  LICENSE  README.md  replicability_instructions.htm
libHexEx/CI/: ci-linux.sh  ci-mac.sh
libHexEx/cmake/: FindOpenVolumeMesh.cmake
libHexEx/cmake-library/: .gitlab-ci-vci.yml
libHexEx/cmake-library/CI/: CMakeLists.txt
libHexEx/cmake-library/CI/tests/Gurobi/: CMakeLists.txt  test_cxx.cc
libHexEx/cmake-library/VCI/: VCICommon.cmake  VCICompiler.cmake  VCIPaths.cmake  VCIQt.cmake
libHexEx/cmake-library/finders/: FindGurobi.cmake
libHexEx/demo/cmdline_tool/: CMakeLists.txt  main.cc
libHexEx/demo/minimum_example/: CMakeLists.txt  main.cc
libHexEx/src/: Dart.cc  Dart.hh  DerivedExactPredicates.cc  DerivedExactPredicates.hh  Direction.cc  Direction.hh  ExactPredicates.hh  FileAccessor.cc  FileAccessor.hh  GridIsomorphism.cc  GridIsomorphism.hh  HPort.cc  HPort.hh  HexEx.cc  HexEx.hh  HexExtractor.cc  HexExtractor.hh  Matrix4x4T.hh  MergePosition.cc  MeshConversion.hh  Typedefs.hh  Utils.cc  Utils.hh  predicates.c
libHexEx/tests/: CMakeLists.txt  cellextraction_test.cc  common.cc  common.hh  fileaccess_test.cc  gridisomorphism_test.cc  navigation_test.cc  predicate_test.cc  unittest.cc
libHexEx/tests/testdata/: sphere.hexex
